--- a/src/index.css
+++ b/src/index.css
@@ -14,16 +14,20 @@ body{
     background-image: url(assets/light-patten.svg);
     
 }
+::selection{
+    background-color: var(--main-color);
+    color: white;
+}
 
 .network{
-  background: white;
-  padding: 10px;
-  border-radius: 5px;
-  position: fixed;
-  bottom: 30px;
-  right: 30px;
-  z-index: 9999999999999;
-  box-shadow: var(--shadow);
+    background: white;
+    padding: 10px;
+    border-radius: 5px;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 9999999999999;
+    box-shadow: var(--shadow);
 }
 .rating-color
 {
@@ -40,7 +44,6 @@ a , a:hover{
 .product:hover
 {
     box-shadow: var(--shadow);
-    border: solid 1px var(--main-color);
 }
 .product .btn 
 {
@@ -92,9 +95,9 @@ a , a:hover{
     width: 40px;
     height: 40px;
     position: relative;
-  }
-  
-  .double-bounce1, .double-bounce2 {
+}
+
+.double-bounce1, .double-bounce2 {
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -106,24 +109,95 @@ a , a:hover{
     
     -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
     animation: sk-bounce 2.0s infinite ease-in-out;
-  }
-  
-  .double-bounce2 {
+    }
+
+    .double-bounce2 {
     -webkit-animation-delay: -1.0s;
     animation-delay: -1.0s;
-  }
-  
-  @-webkit-keyframes sk-bounce {
+    }
+
+    @-webkit-keyframes sk-bounce {
     0%, 100% { -webkit-transform: scale(0.0) }
     50% { -webkit-transform: scale(1.0) }
-  }
-  
-  @keyframes sk-bounce {
-    0%, 100% { 
-      transform: scale(0.0);
-      -webkit-transform: scale(0.0);
-    } 50% { 
-      transform: scale(1.0);
-      -webkit-transform: scale(1.0);
     }
-  }
+
+    @keyframes sk-bounce {
+    0%, 100% { 
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+    } 50% { 
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+    }
+    }
+    .contentInput{
+    border-bottom: 2px solid #d9d9d9;
+    margin-bottom: 2rem;
+    
+}
+.contentInput .icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    }
+    .icon i {
+        color: #d9d9d9;
+    }
+    
+.input{
+    position: relative;
+    height: 45px;
+    
+}
+.input input{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    padding: .5rem .7rem;
+    font-size: 1.2rem;
+    color: #555;
+}
+.input input::placeholder{
+    color: #d9d9d9;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+.alert{
+    padding: 0;
+    top: -30px;
+    text-align: center;
+}
+
+.form{
+    padding: 30px 15px;
+    background-color: white;
+    border-radius: 30px;
+}
+.ecommerce {
+    position: relative;
+    animation: up-and-down 5s linear infinite;
+    
+}
+@keyframes up-and-down {
+
+    0%,
+    100% {
+    top: 0;
+    }
+
+    70% {
+    top: -50px;
+    }
+
+}
+
